--- a/public/css/mnueManger/mnueManger.less
+++ b/public/css/mnueManger/mnueManger.less
@@ -15,6 +15,12 @@
           display: inline-block;
           position: relative;
           font-size: 13px;
+          cursor: pointer;
+        }
+        td{
+          a{
+            margin-left: 5px;
+          }
         }
         span{
           display: inline-block;
