--- a/public/css/mnueManger/mnueManger.less
+++ b/public/css/mnueManger/mnueManger.less
@@ -37,6 +37,79 @@
       }
     }
   }
+  .modal{
+    .modal-content{
+      padding: 10px 0 0 10px;
+      width: 200px;
+      height: 100px;
+      font-size: 10px;
+      .title{
+        margin-bottom: 10px;
+      }
+      .warn{
+        padding-left: 12px;
+      }
+      .btn{
+        margin: 0 auto;
+        width: 100%;
+        button{
+          width: 35%;
+          padding: 0 ;
+          }
+        }
+    }
+  }
+  .tab-content{
+    background-color: #fff;
+    .tab-pane{
+        ul{
+          list-style: none;
+          padding: 0;
+          li{
+            border-bottom: 1px dashed #cccccc;
+            .line_content{
+              padding: 20px 0;
+              label{
+                float: left;
+                text-align: right;
+                width: 160px;
+                margin-right: 20px;
+              }
+              .right{
+                input{
+                  height: 25px;
+                  float: left;
+                  border-width: 1px;
+                  border-style: solid;
+                  border-color: #cccccc;
+                  border-radius: 3px;
+                  font-size: 12px;
+                  padding-left: 5px;
+                }
+                input.search_text{
+                  border-right: none;
+                  border-radius: 3px 0 0 3px;
+                  background-color: #f3f3f3;
+                }
+                button{
+                  height: 25px;
+                  float: left;
+                  top: 0px;
+                  background-color: #fff;
+                  padding: 0;
+                  border:1px solid #cccccc;
+                  width: 40px;
+                }
+                overflow: hidden;
+              }
+            }
+          }
+        }
+      .save{
+        margin-left: 118px;
+      }
+    }
+  }
   .table > thead > tr > th,
   .table > tbody > tr > th,
   .table > tfoot > tr > th,
