--- a/public/css/style.css
+++ b/public/css/style.css
@@ -469,7 +469,9 @@ ul, dl, dt, dd, h1, h2, h3, h4, h5, h6, p {
 ul {
   list-style: none;
 }
-
+li{
+  list-style: none;
+}
 a {
   text-decoration: none;
 }
