--- a/public/css/mnueManger/mnueManger.css
+++ b/public/css/mnueManger/mnueManger.css
@@ -24,12 +24,6 @@
   height: 5px;
   margin-right: 10px;
 }
-.mnue-manger table tbody tr span.no-content {
-  display: inline-block;
-  width: 5px;
-  height: 5px;
-  margin-right: 10px;
-}
 .mnue-manger .modal .modal-content {
   padding: 10px 0 0 10px;
   width: 200px;
@@ -329,4 +323,13 @@
   margin: 0;
   border: 0;
   min-width: 0;
+}
+span.no-content {
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  margin-right: 10px;
+}
+.mnue-manger-tree .modal-body ul {
+  list-style: none;
 }
