--- a/public/css/mnueManger/mnueManger.less
+++ b/public/css/mnueManger/mnueManger.less
@@ -28,12 +28,7 @@
           height: 5px;
           margin-right: 10px;
         }
-        span.no-content{
-          display: inline-block;
-          width: 5px;
-          height: 5px;
-          margin-right: 10px;
-        }
+
       }
     }
   }
@@ -340,5 +335,18 @@
     margin: 0;
     border: 0;
     min-width: 0;
+  }
+}
+span.no-content{
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  margin-right: 10px;
+}
+.mnue-manger-tree{
+  .modal-body{
+    ul{
+      list-style: none;
+    }
   }
 }
