--- a/views/posts.html
+++ b/views/posts.html
@@ -8,16 +8,9 @@
   <link rel="stylesheet" href="/public/vendors/nprogress/nprogress.css">
   <link rel="stylesheet" href="../public/css/admin.css">
   <script src="../public/vendors/nprogress/nprogress.js"></script>
-  <script src="../node_modules/art-template/lib/template-web.js"></script>
 </head>
 <body>
   <script>NProgress.start()</script>
-  <script type="text/javascript" id="template">{{dataJsonArr}}</script>
-  <script type="text/art-template" id="status-list">
-      {{each statusJsonArr}}
-           <option value="{{$value.key}}">{{$value.val}}</option>
-      {{/each}}
-  </script>
   <div class="main">
     <nav class="navbar">
       <button class="btn btn-default navbar-btn fa fa-bars"></button>
@@ -115,9 +108,16 @@
   </div>
 
   <script src="../public/vendors/jquery/jquery.js"></script>
+  <script src="/node_modules/jsrender/jsrender.min.js"></script>
   <script src="../public/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="/public/vendors/util/utils.js"></script>
   <script src="/public/js/post/posts.js"></script>
+  <script type="text/javascript" id="template">{{dataJsonArr}}</script>
+  <script type="text/x-jsrender" id="statusList">
+     {{for statusJsonArr }}
+           <div>{{:title}}</div>
+     {{/for}}
+  </script>
   <script>NProgress.done()</script>
 </body>
 </html>
