--- a/views/posts.html
+++ b/views/posts.html
@@ -34,12 +34,7 @@
           </select>
           <button type="button" class="btn btn-default btn-sm" onclick="seachPostsList()">筛选</button>
         </form>
-        <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+        <ul class="pagination pagination-sm pull-right pages-nav">
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
