--- a/views/login.html
+++ b/views/login.html
@@ -5,23 +5,12 @@
   <title>Sign in &laquo; Admin</title>
   <link rel="stylesheet" href="/public/vendors/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="/public/css/admin.css">
-  <style>
-    .tip{
-      color: red;
-      font-size: 10px;
-      display: block;
-      margin-bottom: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="/public/css/login/login.css">
 </head>
 <body>
   <div class="login">
     <form class="login-wrap">
       <img class="avatar" src="/public/img/default.png">
-      <!-- 有错误信息时展示 -->
-      <!-- <div class="alert alert-danger">
-        <strong>错误！</strong> 用户名或密码错误！
-      </div> -->
       <span class="tip"></span>
       <div class="form-group">
         <label for="email" class="sr-only">邮箱</label>
@@ -32,52 +21,13 @@
         <input id="password" name="password" type="password" class="form-control" placeholder="密码">
       </div>
       <a id="login" class="btn btn-primary btn-block"  href="javascript:;">登 录</a>
+      <div class="registerOrReset">
+        <a href="/baixiu/forgetPwd">忘记密码</a>
+        <a href="/baixiu/registered">注册</a>
+      </div>
     </form>
   </div>
 </body>
 <script src="/public/vendors/jquery/jquery.js"></script>
-<script>
-$(function () {
-    var reg = /^([a-zA-Z]|[0-9])(\w|\-)+@[a-zA-Z0-9]+\.([a-zA-Z]{2,4})$/;
-    $('#login').on('click',function () {
-        // 本地验证登录信息
-        if(!$('#email').val()){
-           $('.tip').html('用户名不能为空').show();
-            return;
-        }
-        if(!$('#password').val()){
-            $('.tip').html('密码不能为空').show();
-            return;
-        }
-        if(!reg.test($('#email').val())){
-            $('.tip').html('邮箱格式不正确').show();
-            return;
-        }
-        $('.tip').hide();
-        //验证满足条件之后开始请求登录接口，获取登录接口
-        $.ajax({
-            type: 'post',
-            url: '/baixiu/login',
-            data: {email:$('#email').val(),password:$('#password').val()},
-            dataType: "json",
-            success: function (data) {
-                window.location.href= '/';
-            },
-            error:function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("请求失败！");
-            }
-
-        });
-
-    });
-    $('#email').on('blur',function () {
-        if(!reg.test($('#email').val())){
-            $('.tip').html('邮箱格式不正确').show();
-            return;
-        }else{
-            $('.tip').hide();
-        }
-    })
-})
-</script>
+<script src="/public/js/login/login.js"></script>
 </html>
