登陆输入正确的用户名显示用户的头像

--- a/views/login.html
+++ b/views/login.html
@@ -20,7 +20,7 @@
         <label for="password" class="sr-only">密码</label>
         <input id="password" name="password" type="password" class="form-control" placeholder="密码">
       </div>
-      <a id="login" class="btn btn-primary btn-block"  href="javascript:;">登 录</a>
+      <a id="login" class="btn btn-primary btn-block"  href="javascript:;" disabled="true">登 录</a>
       <div class="registerOrReset">
         <a href="/baixiu/forgetPwd">忘记密码</a>
         <a href="/baixiu/registered">注册</a>
@@ -29,5 +29,6 @@
   </div>
 </body>
 <script src="/public/vendors/jquery/jquery.js"></script>
+<script src="/public/vendors/util/utils.js"></script>
 <script src="/public/js/login/login.js"></script>
 </html>
