--- a/views/forgetPwd.html
+++ b/views/forgetPwd.html
@@ -16,10 +16,11 @@
             <label for="email" class="sr-only">邮箱</label>
             <input id="email" name="email" type="email" class="form-control" placeholder="请输入注册的邮箱号" autofocus>
         </div>
-        <a id="find-pwd" class="btn btn-primary btn-block"  href="javascript:;">发送邮件找回密码</a>
+        <a id="find-pwd" class="btn btn-primary btn-block"  href="javascript:;" disabled="true">发送邮件找回密码</a>
     </form>
 </div>
 </body>
 <script src="/public/vendors/jquery/jquery.js"></script>
+<script src="/public/vendors/util/utils.js"></script>
 <script src="/public/js/forgetPwd/forgetPwd.js"></script>
 </html>
