--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -385,3 +385,38 @@ body {
   border-radius: 50%;
   box-shadow: 0 1px 5px #ccc;
 }
+.reset_pwd {
+  position: fixed;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #2f4050;
+}
+
+.reset_pwd .login-wrap {
+  position: relative;
+
+  max-width: 380px;
+  margin: 180px auto;
+  padding: 100px 40px 40px;
+
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+.reset_pwd .login-wrap .avatar {
+  position: absolute;
+  top: -60px;
+  left: 50%;
+
+  overflow: hidden;
+
+  width: 140px;
+  height: 140px;
+  margin-left: -70px;
+
+  border: 10px solid #fff;
+  border-radius: 50%;
+  box-shadow: 0 1px 5px #ccc;
+}
