--- a/views/forgetPwd.html
+++ b/views/forgetPwd.html
@@ -16,7 +16,7 @@
             <label for="email" class="sr-only">邮箱</label>
             <input id="email" name="email" type="email" class="form-control" placeholder="请输入注册的邮箱号" autofocus>
         </div>
-        <a id="find-pwd" class="btn btn-primary btn-block"  href="javascript:;" disabled="true">发送邮件找回密码</a>
+        <button  id="find-pwd" class="btn btn-primary btn-block"  href="javascript:;" disabled="true">发送邮件找回密码</button>
     </form>
 </div>
 </body>
