修改菜单添加bug

--- a/views/mnueManger.html
+++ b/views/mnueManger.html
@@ -25,7 +25,7 @@
         <div>
             <ul class="nav nav-tabs mnue-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#mnue_list"  data-toggle="tab">菜单列表</a></li>
-                <li role="presentation" ><a href="#mnue_add"  data-toggle="tab">菜单添加</a></li>
+                <li role="presentation" ><a href="#mnue_add" id="mnue-add" data-toggle="tab">菜单添加</a></li>
             </ul>
             <div class="tab-content mnue-content">
                 <div class="tab-pane active" id="mnue_list">
