--- a/views/mnueManger.html
+++ b/views/mnueManger.html
@@ -24,7 +24,7 @@
     <div class="container-fluid">
         <div>
             <ul class="nav nav-tabs mnue-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#mnue_list"  data-toggle="tab">菜单列表</a></li>
+                <li role="presentation" class="active"><a href="#mnue_list" id="mnue-list"  data-toggle="tab">菜单列表</a></li>
                 <li role="presentation" ><a href="#mnue_add" id="mnue-add" data-toggle="tab">菜单添加</a></li>
             </ul>
             <div class="tab-content mnue-content">
