--- a/views/login.html
+++ b/views/login.html
@@ -25,6 +25,8 @@
         <a href="/baixiu/forgetPwd">忘记密码</a>
         <a href="/baixiu/registered">注册</a>
       </div>
+      <div  style="height: 100px; width: 200px;margin-top: 20px">
+      </div>
     </form>
   </div>
 </body>
