--- a/views/test.html
+++ b/views/test.html
@@ -36,12 +36,12 @@
     ];
 
 </script>
-<script src="public/vendors/jquery/jquery.js"></script>
-<script src="node_modules/jsrender/jsrender.min.js"></script>
-<script src="node_modules/art-template/lib/template-web.js"></script>
+<script src="../public/vendors/jquery/jquery.js"></script>
+<script src="../node_modules/jsrender/jsrender.min.js"></script>
+<script src="../node_modules/art-template/lib/template-web.js"></script>
 <script id="movieTemplate" type="text/x-jsrender">
     	<div>
-    		{{:#index+1}}: <b>{{>name}}</b> ({{>releaseYear}})
+    		{{:#index+1}}: <b>{{:name}}</b> ({{:releaseYear}})
     	</div>
     </script>
 </body>
