--- a/views/cisApproval.html
+++ b/views/cisApproval.html
@@ -25,7 +25,7 @@
             <h1>CIS人员权限配置</h1>
         </div>
         <button type="button" class="btn btn-primary" onclick="downLoadTemplte()">模板下载</button>
-        <form style="margin-top: 20px" id="uploadFile">
+        <form style="margin-top: 20px" id="uploadFile" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="cis_division">输入上线公司区域代码：</label>
                 <input type="text"  id="cis_division" name="cisdiv">
