--- a/views/businessTrip.html
+++ b/views/businessTrip.html
@@ -11,12 +11,7 @@
     <script src="../public/vendors/nprogress/nprogress.js"></script>
     <script>
         window.onload = function () {
-            // var date= new Date(2019, 2, 0);
-            var date = new Date();
-            var maxDayInMonth = date.getDate();//获取某年某个月份最大的天数
-            var year=date.getFullYear();//获取当前时间的年份
-            var month=date.getMonth()+1;//获取当前时间的月份数
-            alert(year+"-"+month);
+            dateUtils.renderCander($('tbody'))
         }
     </script>
     <style type="text/css">
@@ -90,6 +85,8 @@
 <script src="../public/vendors/util/utils.js"></script>
 <script src="../public/js/cis/cisApproval.js"></script>
 <script src="../public/js/mnueManger/mnueManger.js"></script>
+<script src="../public/vendors/util/DateUtils.js"></script>
+
 <script>NProgress.done()</script>
 </body>
 </html>
