--- a/views/businessTrip.html
+++ b/views/businessTrip.html
@@ -65,7 +65,7 @@
         <div class="calendar">
             <table>
                 <thead>
-                    <tr><td class="back"><</td><td colspan="5" class="showTime"></td><td class="forword">></td></tr>
+                    <tr><td class="back" onclick="changeMonth('-')"><</td><td colspan="5" class="showTime"></td><td class="forword" onclick="changeMonth('+')">></td></tr>
                 </thead>
                 <tbody>
                 </tbody>
