--- a/views/businessTrip.html
+++ b/views/businessTrip.html
@@ -42,7 +42,7 @@
         }
 
         tbody td.now {
-            background-color: li;
+            background-color: blue;
             color: white;
         }
 
